imgdir = $(datadir)/@PACKAGE@/icons
img_DATA= \
	menu.about.png \
	menu.add.png \
	menu.close.png \
	menu.setting.png \
	menu.upgrade.png \
	timeline.dm.png \
	timeline.favorites.png \
	timeline.home.png \
	timeline.link.png \
	timeline.mention.png \
	timeline.photo.png \
	timeline.update.png \
	twc.about.png \
	twc.favicon.png \
	twc.logo.png \
	twitter.sign-in.png
