icondir = /usr/share/icons
icon_DATA= TwitCrusader.png

imgdir = $(datadir)/@PACKAGE@/icons
img_DATA= \
	default_profile.png \
	menu.about.png \
	menu.add.png \
	menu.close.png \
	menu.setting.png \
	menu.upgrade.png \
	menu.update.png \
	timeline.dm.png \
	timeline.favorites.png \
	timeline.home.png \
	timeline.link.png \
	timeline.mention.png \
	timeline.photo.png \
	timeline.update.png \
	twc.about.png \
	twc.favicon.png \
	TwitCrusader.png \
	twitter.sign-in.png
